--- a/app/src/main/res/layout/fragment_socity.xml
+++ b/app/src/main/res/layout/fragment_socity.xml
@@ -27,7 +27,7 @@
         android:inputType="textPersonName"
         android:textSize="@dimen/space_14" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_socity"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
