--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,7 +81,7 @@
                 android:orientation="horizontal">
 
 
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/collapsing_recycler"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -90,7 +90,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp">
 
-                </android.support.v7.widget.RecyclerView>
+                </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
 
 
@@ -196,7 +196,7 @@
                     </LinearLayout>
 
 
-                    <android.support.v7.widget.RecyclerView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/top_selling_recycler"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -298,7 +298,7 @@
                     </LinearLayout>
 
 
-                    <android.support.v7.widget.RecyclerView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_deal"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -396,7 +396,7 @@
                     android:background="#ffffff"
                     android:orientation="vertical">
 
-                    <android.support.v7.widget.RecyclerView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_home"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
