--- a/app/src/main/res/layout/fragment_shop_now.xml
+++ b/app/src/main/res/layout/fragment_shop_now.xml
@@ -52,7 +52,7 @@
                     android:background="#ffffff"
                     android:orientation="vertical">
 
-                    <android.support.v7.widget.RecyclerView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_home"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
