--- a/app/src/main/res/layout/row_headre_catogaries.xml
+++ b/app/src/main/res/layout/row_headre_catogaries.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/icon_card_view"
         android:layout_width="78dp"
         android:layout_height="58dp"
@@ -41,5 +41,5 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
