--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -237,7 +237,7 @@
             <FrameLayout
                 android:id="@+id/deal_frame_layout"
                 android:layout_width="match_parent"
-                android:layout_height="460dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
 
@@ -306,7 +306,6 @@
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="40dp"
                         android:background="@color/light_gray"
-                        android:scrollbars="none"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
