--- a/app/src/main/res/layout/row_deal_of_the_day.xml
+++ b/app/src/main/res/layout/row_deal_of_the_day.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/card_view_top"
     android:layout_width="match_parent"
+    android:layout_margin="@dimen/space_6"
     android:layout_height="wrap_content"
     android:elevation="@dimen/space_4"
     card_view:cardCornerRadius="12dp"
