--- a/app/src/main/res/layout/row_product_rv.xml
+++ b/app/src/main/res/layout/row_product_rv.xml
@@ -133,7 +133,8 @@
             android:layout_marginTop="8dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/plus" />
+            app:srcCompat="@drawable/add"
+            android:background="@color/green"/>
 
         <TextView
             android:id="@+id/tv_subcat_contetiy"
@@ -154,10 +155,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_8"
             android:layout_marginRight="@dimen/space_8"
+            android:background="@color/green"
             app:layout_constraintBottom_toBottomOf="@+id/iv_subcat_plus"
             app:layout_constraintRight_toLeftOf="@+id/tv_subcat_contetiy"
             app:layout_constraintTop_toTopOf="@+id/iv_subcat_plus"
-            app:srcCompat="@drawable/minus" />
+            app:srcCompat="@drawable/subtract" />
 
         <Fonts.LatoBLack
             android:id="@+id/tv_subcat_add"
