--- a/app/src/main/res/layout/row_top_selling.xml
+++ b/app/src/main/res/layout/row_top_selling.xml
@@ -1,10 +1,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/card_view_top"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/space_5"
-    card_view:cardCornerRadius="12dp"
+    card_view:cardCornerRadius="20dp"
     card_view:cardPreventCornerOverlap="false"
     android:elevation="@dimen/space_4"
     card_view:cardUseCompatPadding="true">
