--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -75,7 +75,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -88,7 +88,8 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp">
+                    android:layout_marginLeft="5dp"
+                    >
 
                 </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
@@ -112,29 +113,27 @@
                 <!--android:gravity="center" />-->
             </RelativeLayout>
 
-
-
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="460dp"
+                android:layout_height="290dp"
                 android:orientation="vertical">
 
 
                 <ImageView
                     android:id="@+id/top_selling_imageview"
                     android:layout_width="match_parent"
-                    android:layout_height="430dp"
+                    android:layout_height="280dp"
                     android:background="@drawable/del" />
 
                 <FrameLayout
                     android:id="@+id/frame1"
                     android:layout_width="match_parent"
-                    android:layout_height="440dp"
+                    android:layout_height="280dp"
                     android:layout_marginTop="12dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="55dp"
+                        android:layout_height="45dp"
                         android:weightSum="2">
 
                         <LinearLayout
@@ -182,15 +181,16 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/top_selling_recycler"
+                        android:layout_marginTop="15dp"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
-                        android:layout_marginTop="40dp"
-                        android:background="@color/light_gray"
+                        android:background="@android:color/transparent"
                         android:scrollbars="none"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                        />
 
 
                 </FrameLayout>
