--- a/app/src/main/res/layout/row_top_selling.xml
+++ b/app/src/main/res/layout/row_top_selling.xml
@@ -1,31 +1,30 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_top"
-    android:layout_width="200dp"
+    android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/space_5"
-    card_view:cardCornerRadius="20dp"
-    card_view:cardPreventCornerOverlap="false"
-    android:elevation="@dimen/space_4"
-    card_view:cardUseCompatPadding="true">
-
+    app:cardElevation="5dp"
+    app:cardCornerRadius="15dp"
+    >
 
     <LinearLayout
+        android:background="@drawable/b_background"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/space_5"
-        android:layout_height="190dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="top"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:gravity="top|center"
             android:orientation="vertical">
 
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_marginTop="10dp"
                 android:id="@+id/iv_icon"
-                android:layout_width="80dp"
+                android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:src="@mipmap/ic_launcher" />
 
@@ -36,7 +35,7 @@
                 android:gravity="center"
                 android:text="Product Name"
                 android:layout_marginTop="@dimen/space_12"
-                android:textColor="#837e7e"
+                android:textColor="#000000"
                 android:textSize="@dimen/text_size_normal" />
 
             <TextView
@@ -47,7 +46,9 @@
                 android:layout_marginTop="@dimen/space_4"
                 android:text="Product Price"
                 android:textColor="@color/green"
-                android:textSize="@dimen/text_size_large" />
+                android:textSize="@dimen/text_size_large"
+                android:layout_marginBottom="10dp"
+                />
 
         </LinearLayout>
     </LinearLayout>
