--- a/app/src/main/res/layout/row_headre_catogaries.xml
+++ b/app/src/main/res/layout/row_headre_catogaries.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
+
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/icon_card_view"
         android:layout_width="78dp"
-        android:layout_height="58dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         app:cardBackgroundColor="@android:color/transparent"
