--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,18 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <!--<item
-        android:id="@+id/action_language"
-        android:actionLayout="@layout/menu_cart_layout"
-        android:icon="@drawable/language"
-        android:title="@string/nav_home"
-        app:actionLayout="@layout/menu_cart_layout"
-        app:icon="@drawable/language"
-        app:showAsAction="ifRoom" />-->
     <item
+        android:actionLayout="@layout/menu_cart_language"
         android:id="@+id/action_language"
         android:title="Language"
-        android:icon="@drawable/language"
+        android:icon="@drawable/lang2"
         app:showAsAction="always"
         />
 
