--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,27 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gogrocer.tcc.LoginActivity">
+    android:background="@color/white"
+    tools:context="gogrocer.tcc.LoginActivity"
+    android:fillViewport="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:background="@drawable/background1"
+        android:id="@+id/rr1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/summervibes"
+                android:text="Sign In"
+                android:layout_gravity="center"
+                android:textSize="40dp"
+                android:textColor="@color/white"
+                android:textAllCaps="false"/>
+        </LinearLayout>
         <ImageView
             android:id="@+id/loginImage"
             android:layout_width="match_parent"
             android:layout_height="140dp"
+            android:visibility="gone"
             android:scaleType="centerCrop"
-           android:src="@drawable/shapes"/>
+           android:src="@drawable/background1"/>
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_below="@id/rr1"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -35,12 +58,14 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:src="@drawable/icon"
+            android:visibility="gone"
             android:textAlignment="center" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:layout_height="wrap_content">
             <Fonts.LatoBLack
                 android:id="@+id/tv_login_email"
@@ -60,23 +85,36 @@
         </LinearLayout>
 
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_10"
+            android:layout_marginBottom="@dimen/space_10"
+            app:cardCornerRadius="@dimen/space_20"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardElevation="4dp">
+
+
         <EditText
             android:id="@+id/et_login_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_4"
-            android:background="@drawable/xml_textbox_bg"
-            android:ems="10"
-            android:gravity="center_horizontal"
+            android:background="@drawable/bg2"
+            android:drawablePadding="@dimen/space_10"
+            android:drawableLeft="@drawable/email"
             android:inputType="textEmailAddress"
             android:padding="@dimen/space_10"
-            android:textAlignment="center"
             android:textColor="#000"
+            android:hint="Email"
             android:textColorHint="@color/dark_gray"
             android:textSize="14sp" />
+        </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:layout_height="wrap_content">
 
             <Fonts.LatoBLack
@@ -97,24 +135,33 @@
 
         </LinearLayout>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="50dp"
+            app:cardCornerRadius="@dimen/space_20"
+            android:layout_marginLeft="15dp"
 
+            android:layout_marginRight="15dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardElevation="4dp">
         <EditText
             android:id="@+id/et_login_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_10"
-            android:layout_marginTop="@dimen/space_4"
-            android:background="@drawable/xml_textbox_bg"
+            android:background="@drawable/bg2"
             android:ems="10"
-            android:gravity="center_horizontal"
             android:inputType="textPassword"
             android:maxLength="10"
             android:padding="@dimen/space_10"
-            android:textAlignment="center"
             android:textColor="#000"
+            android:hint="Password"
+            android:drawablePadding="@dimen/space_10"
+            android:drawableLeft="@drawable/password"
             android:textColorHint="@color/dark_gray"
             android:textSize="14sp" />
-
+        </androidx.cardview.widget.CardView>
         <RelativeLayout
             android:id="@+id/btnContinue"
             android:layout_width="match_parent"
@@ -129,7 +176,8 @@
                 android:gravity="center"
                 android:text="@string/btn_continue"
                 android:textColor="#fff"
-                android:textSize="@dimen/text_size_small" />
+                android:textStyle="bold"
+                android:textSize="14dp" />
 
 
         </RelativeLayout>
@@ -146,9 +194,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:textStyle="bold"
                 android:text="@string/btn_Register"
                 android:textColor="#fff"
-                android:textSize="@dimen/text_size_small" />
+                android:textSize="14dp" />
 
 
         </RelativeLayout>
@@ -212,4 +261,6 @@
         </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+
+    </RelativeLayout>
+</ScrollView>
