--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -127,6 +127,7 @@
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_marginTop="@dimen/space_10"
+                    android:visibility="gone"
                     android:src="@drawable/iconn" />
 
             </LinearLayout>
