--- a/app/src/main/res/layout/row_top_selling.xml
+++ b/app/src/main/res/layout/row_top_selling.xml
@@ -36,6 +36,7 @@
                 android:text="Product Name"
                 android:layout_marginTop="@dimen/space_12"
                 android:textColor="#000000"
+                android:maxLines="1"
                 android:textSize="16sp" />
 
             <TextView
