--- a/app/src/main/res/drawable/b_background.xml
+++ b/app/src/main/res/drawable/b_background.xml
@@ -8,7 +8,7 @@
         android:radius="15dp"
         />
     <stroke
-        android:color="@color/colorPrimary"
+        android:color="@color/colorAccent"
         android:width="2dp"
         />
 </shape>
