--- a/app/src/main/res/drawable/background1.xml
+++ b/app/src/main/res/drawable/background1.xml
@@ -6,6 +6,7 @@
 <gradient
     android:startColor="@color/color1"
     android:endColor="@color/color2"
+    android:angle="90"
 
     />
 <!--    <solid android:color="@color/color1"/>-->
