--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,12 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="gogrocer.tcc.RegisterActivity">
 
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:background="@drawable/background1"
+                android:id="@+id/rr1">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/summervibes"
+                        android:text="Sign Up"
+                        android:layout_gravity="center"
+                        android:textSize="40dp"
+                        android:textColor="@color/white"
+                        android:textAllCaps="false"/>
+                </LinearLayout>
+            </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,10 +50,12 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
+                android:visibility="gone"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
                 android:src="@drawable/icon"
@@ -32,6 +63,7 @@
 
             <Fonts.LatoBLack
                 android:id="@+id/textView"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="25dp"
@@ -47,6 +79,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:orientation="horizontal"
+    android:visibility="gone"
     android:layout_height="wrap_content">
     <Fonts.LatoBLack
         android:id="@+id/tv_reg_name"
@@ -63,21 +96,33 @@
         android:layout_height="16dp" />
 
 </LinearLayout>
-
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginBottom="@dimen/space_10"
+                app:cardCornerRadius="@dimen/space_20"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardElevation="4dp">
             <EditText
                 android:id="@+id/et_reg_name"
                 android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/space_4"
+                android:padding="@dimen/space_10"
                 android:textSize="14sp"
+                android:drawableLeft="@drawable/person"
+                android:drawablePadding="@dimen/space_10"
+                android:hint="Name"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/space_5"
-                android:background="@drawable/xml_textbox_bg"
+                android:background="@drawable/bg2"
                 android:ems="10"
                 android:inputType="text" />
-
+            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_height="wrap_content">
                 <Fonts.LatoBLack
                     android:id="@+id/tv_reg_email"
@@ -98,20 +143,34 @@
             </LinearLayout>
 
 
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_20"
+                android:layout_marginBottom="@dimen/space_10"
+                app:cardCornerRadius="@dimen/space_20"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardElevation="4dp">
             <EditText
                 android:id="@+id/et_reg_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_4"
+                android:padding="@dimen/space_10"
+                android:drawableLeft="@drawable/email"
+                android:drawablePadding="@dimen/space_10"
+                android:hint="Email"
                 android:textSize="14sp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/xml_textbox_bg"
+                android:background="@drawable/bg2"
                 android:ems="10"
                 android:inputType="textEmailAddress" />
-
+            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_height="wrap_content">
                 <Fonts.LatoBLack
                     android:textColor="#000"
@@ -131,20 +190,31 @@
                     android:src="@drawable/iconn" />
 
             </LinearLayout>
-
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_20"
+                android:layout_marginBottom="@dimen/space_10"
+                app:cardCornerRadius="@dimen/space_20"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardElevation="4dp">
 
             <EditText
-                android:layout_marginTop="@dimen/space_4"
                 android:textSize="14sp"
                 android:id="@+id/et_reg_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/space_10"
-                android:background="@drawable/xml_textbox_bg"
+                android:background="@drawable/bg2"
+                android:padding="@dimen/space_10"
+                android:drawableLeft="@drawable/phone"
+                android:hint="Phone"
+                android:drawablePadding="@dimen/space_10"
                 android:ems="10"
                 android:inputType="phone"
                 android:maxLength="15" />
-
+            </androidx.cardview.widget.CardView>
             <!--<TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -172,6 +242,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_height="wrap_content">
                 <Fonts.LatoBLack
                     android:textColor="#000"
@@ -190,35 +261,46 @@
             </LinearLayout>
 
 
-
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_20"
+                android:layout_marginBottom="30dp"
+                app:cardCornerRadius="@dimen/space_20"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardElevation="4dp">
 
             <EditText
                 android:textSize="14sp"
-                android:layout_marginTop="@dimen/space_4"
                 android:id="@+id/et_reg_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/xml_textbox_bg"
+                android:padding="@dimen/space_10"
+                android:drawableLeft="@drawable/password"
+                android:drawablePadding="@dimen/space_10"
+                android:hint="Password"
+                android:background="@drawable/bg2"
                 android:inputType="textPassword"
                 android:maxLength="10"
                 android:ems="10"/>
-
+            </androidx.cardview.widget.CardView>
             <RelativeLayout
                 android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:background="@drawable/bg_rounded_button"
-                android:padding="12dp">
+                android:background="@drawable/bac1">
 
                 <Fonts.LatoBLack
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="@string/btn_Register"
+                    android:padding="@dimen/space_12"
                     android:textColor="#fff"
-                    android:textSize="@dimen/text_size_small"/>
+                    android:textSize="14dp"/>
 
 
             </RelativeLayout>
@@ -270,6 +352,10 @@
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
+
+
+
+</LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
