--- a/app/src/main/res/layout/row_top_selling.xml
+++ b/app/src/main/res/layout/row_top_selling.xml
@@ -37,6 +37,8 @@
                 android:layout_marginTop="@dimen/space_12"
                 android:textColor="#000000"
                 android:maxLines="1"
+                android:layout_marginRight="@dimen/space_4"
+                android:layout_marginLeft="@dimen/space_4"
                 android:textSize="16sp" />
 
             <TextView
