--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -6,13 +6,73 @@
     xmlns:shimmer="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:layout_gravity="bottom"
+        android:background="@color/green"
+        android:gravity="bottom">
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/light_gray"-->
-<!--        android:fillViewport="true"-->
-<!--        android:scrollbars="vertical">-->
+        <LinearLayout
+            android:id="@+id/search_layout"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/back_border"
+            android:orientation="horizontal">
+
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="8dp"
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:id="@+id/lens"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="8dp"
+                    android:src="@drawable/lens" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:layout_toRightOf="@id/lens"
+                    android:gravity="top"
+                    android:text="Search For Products,Brands and More"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+        </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_toRightOf="@+id/search_layout"
+            android:background="@drawable/icon"/>
+
+
+    </RelativeLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/light_gray"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/light_gray"
+            android:orientation="vertical">
+
 
 
         <LinearLayout
@@ -32,7 +92,26 @@
                 </com.daimajia.slider.library.SliderLayout>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/collapsing_recycler"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="5dp"
+                    >
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,12 +127,14 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_marginTop="20dp"
+                        android:layout_marginBottom="50dp"
                         android:id="@+id/rv_stores"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:scrollbars="none"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior"
                         />
+
 
                 </LinearLayout>
                 <com.facebook.shimmer.ShimmerFrameLayout
@@ -64,7 +145,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="15dp"
                     android:orientation="vertical"
-                    android:visibility="gone"
+
                     shimmer:duration="500">
 
                     <!-- Adding 7 rows of placeholders -->
@@ -79,7 +160,10 @@
                     </LinearLayout>
 
                 </com.facebook.shimmer.ShimmerFrameLayout>
+
             </LinearLayout>
+            </LinearLayout>
+
         </LinearLayout>
-<!--    </ScrollView>-->
+    </ScrollView>
 </LinearLayout>
