--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="yelow">#ffee05</color>
     <color name="purple">#ed0bc0</color>
 
+    <color name="splash_pink">#ff69b4</color>
     <color name="green">#7ad6d6</color>
     <color name="light_gray">#faf5f5</color>
     <color name="contact_name">#333333</color>
