--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,39 +9,39 @@
     android:fillViewport="true">
 
     <RelativeLayout
+        android:background="@color/white"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:background="@drawable/background1"
-        android:id="@+id/rr1">
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:visibility="gone"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_gravity="center"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:background="@drawable/pinky"
+            />
         <LinearLayout
+            android:id="@+id/rr1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
+            >
+        <TextView
+            android:gravity="center"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/summervibes"
                 android:text="Sign In"
                 android:layout_gravity="center"
-                android:textSize="40dp"
-                android:textColor="@color/white"
-                android:textAllCaps="false"/>
+                android:textSize="35dp"
+                android:textColor="@color/black"
+                android:textAllCaps="false"
+            />
         </LinearLayout>
-        <ImageView
-            android:id="@+id/loginImage"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:visibility="gone"
-            android:scaleType="centerCrop"
-           android:src="@drawable/background1"/>
-    </RelativeLayout>
-
     <LinearLayout
+        android:id="@+id/aar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rr1"
@@ -137,7 +137,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="39dp"
             app:cardCornerRadius="25dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
@@ -167,103 +167,196 @@
             android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.cardview.widget.CardView>
-        <RelativeLayout
-            android:id="@+id/btnContinue"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="12dp"
-            android:background="@drawable/bac1"
-            >
-
-            <Fonts.LatoBLack
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/btn_continue"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:textSize="14dp" />
-
-
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:id="@+id/btnRegister"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="12dp"
-            android:background="@drawable/bac1">
-
-            <Fonts.LatoBLack
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:text="@string/btn_Register"
-                android:textColor="#fff"
-                android:textSize="14dp" />
-
-
-        </RelativeLayout>
 
         <Fonts.LatoBLack
             android:id="@+id/btnForgot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:gravity="center"
-            android:layout_marginTop="-2dp"
+            android:layout_marginTop="-36dp"
             android:layout_marginRight="20dp"
             android:text="@string/forgot"
             android:textColor="@color/green"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            />
+
+        <RelativeLayout
+            android:id="@+id/btnContinue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:background="@drawable/bac1"
+            >
+
+            <Fonts.LatoBLack
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:gravity="center"
+                android:fontFamily="@font/bold"
+                android:text="@string/btn_continue"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:textSize="14dp"
+                />
+
+
+        </RelativeLayout>
+
+
+<!--        <RelativeLayout-->
+<!--            android:visibility="gone"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="45dp"-->
+<!--            android:layout_margin="12dp"-->
+<!--            android:background="@drawable/bac1">-->
+
+<!--            <Fonts.LatoBLack-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:gravity="center"-->
+<!--                android:textStyle="bold"-->
+<!--                android:text="@string/btn_Register"-->
+<!--                android:textColor="#fff"-->
+<!--                android:textSize="14dp" />-->
+
+<!--        </RelativeLayout>-->
+
+        <TextView
+            android:layout_marginTop="13dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="-OR-"
+            android:fontFamily="@font/gotham"
+            android:textAlignment="center"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
+            android:orientation="vertical"
+            >
 
             <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="80dp">
-
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
                 <com.facebook.login.widget.LoginButton
                     xmlns:facebook="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/loginfb"
-                    android:layout_marginTop="10dp"
-                    android:paddingTop="12dp"
-                    android:layout_alignParentRight="true"
-                    facebook:com_facebook_login_text="    Facebook"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:paddingTop="13dp"
                     android:paddingBottom="13dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"
-                    android:layout_width="wrap_content"
+                    facebook:com_facebook_login_text="Sign In with Facebook"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
                 <com.google.android.gms.common.SignInButton
                     android:id="@+id/gsignin"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_alignParentLeft="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:textAlignment="center"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_width="match_parent"
+                    />
             </RelativeLayout>
         </LinearLayout>
+
     </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/temp1"
+            android:layout_below="@id/aar2"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:backgroundTint="@color/green"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="center"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:background="@drawable/pinky"
+                />
+            <TextView
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="Create an Account?"
+                android:fontFamily="@font/bold"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:id="@+id/btnRegister"
+                android:layout_gravity="center"
+                android:layout_marginLeft="7dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="@string/sign_up"
+                android:fontFamily="@font/bold"
+                android:textColor="@color/green"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_below="@id/temp1"
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:backgroundTint="@color/green"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="center"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:background="@drawable/pinky"
+                />
+            <TextView
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="Or Sign In as a "
+                android:fontFamily="@font/bold"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:onClick="guest"
+                android:padding="8dp"
+                android:background="@drawable/back_fb"
+                android:layout_gravity="center"
+                android:layout_marginLeft="7dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="@string/guest"
+                android:fontFamily="@font/bold"
+                android:textColor="@color/black"
+                />
+
+        </LinearLayout>
+
 
 
     </RelativeLayout>
