--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,32 +13,22 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <TextView
+                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:background="@drawable/background1"
-                android:id="@+id/rr1">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/summervibes"
-                        android:text="Sign Up"
-                        android:layout_gravity="center"
-                        android:textSize="40dp"
-                        android:textColor="@color/white"
-                        android:textAllCaps="false"/>
-                </LinearLayout>
-            </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/summervibes"
+                android:text="Sign Up"
+                android:layout_gravity="center"
+                android:textSize="35dp"
+                android:textColor="@color/black"
+                android:textAllCaps="false"
+                />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,6 +86,7 @@
         android:layout_height="16dp" />
 
 </LinearLayout>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -338,53 +329,60 @@
             </RelativeLayout>
 
 
+            <TextView
+                android:layout_marginTop="13dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="-OR-"
+                android:fontFamily="@font/gotham"
+                android:textAlignment="center"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
+                android:orientation="vertical"
+                >
 
                 <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="80dp">
-
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
                     <com.facebook.login.widget.LoginButton
                         xmlns:facebook="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/loginfb"
-                        android:layout_marginTop="10dp"
-                        android:paddingTop="11dp"
-                        android:layout_alignParentRight="true"
-                        facebook:com_facebook_login_text="Facebook"
-                        android:paddingBottom="12dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="wrap_content"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginLeft="15dp"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
+                        facebook:com_facebook_login_text="Sign In with Facebook"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
 
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="80dp"
-                    android:layout_weight="1">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
                     <com.google.android.gms.common.SignInButton
                         android:id="@+id/gsignin"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_alignParentLeft="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:textAlignment="center"
                         android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:layout_marginBottom="10dp"/>
+                        android:layout_width="match_parent"
+                        />
                 </RelativeLayout>
             </LinearLayout>
-        </LinearLayout>
 
+
+        </LinearLayout>
 
 
 </LinearLayout>
