--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,29 +7,40 @@
     android:background="@color/white"
     tools:context="gogrocer.tcc.SplashActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <LinearLayout
         android:layout_centerInParent="true"
-        android:id="@+id/imageView2"
-        android:layout_width="230dp"
-        android:layout_height="230dp"
-        android:src="@drawable/icon"
-        />
-
-    <Fonts.LatoBLack
-        android:visibility="gone"
-        android:layout_width="348dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textColor="@color/green"
-        android:textSize="@dimen/text_size_large"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="326dp" />
-
+        android:orientation="vertical"
+        >
+        <TextView
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:text="Welcome"
+            android:fontFamily="@font/bold"
+            android:textSize="60sp"
+            />
+        <TextView
+            android:padding="10dp"
+            android:textColor="#ff69b4"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:text="TO"
+            android:fontFamily="@font/vtks"
+            android:textSize="60sp"
+            />
+        <TextView
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:text="J6 Store"
+            android:fontFamily="@font/bold"
+            android:textSize="60sp"
+            />
+    </LinearLayout>
 
 </RelativeLayout>
