--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -6,6 +6,7 @@
     xmlns:shimmer="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="57dp"
@@ -52,13 +53,15 @@
                     android:textSize="12sp" />
             </RelativeLayout>
         </LinearLayout>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_toRightOf="@+id/search_layout"
-            android:background="@drawable/icon"/>
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/icon"
+            />
 
     </RelativeLayout>
     <ScrollView
@@ -83,7 +86,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="210dp"
                 android:background="@color/white">
                 <com.daimajia.slider.library.SliderLayout
                     android:id="@+id/relative_banner"
